// @see https://developers.google.com/protocol-buffers/docs/proto3

syntax = "proto3";

package accounts;

service AccountService {
  rpc getAccounts (GetAccountsRequest) returns (GetAccountsResponse) {}
}

message GetAccountsRequest {
  string customerId = 1;
}

message GetAccountsResponse {
  repeated Account accounts = 1;
}

message Account {
  string id = 1;
  string customerId = 2;
  string sortCode = 3;
  string accountNumber = 4;
  string balance = 5;
  string currency = 6;
}
